# cue-examples

./: MODULE.bazel  README.md
bazel/: BUILD.bazel  WORKSPACE.bazel
bazel/cue.mod/: module.cue
kubernetes/: BUILD.bazel  README.md  go.mod  kubernetes.cue
kubernetes/cluster/: cluster.cue  cluster_tool.cue
kubernetes/cluster/kind/: BUILD.bazel  README.md  Tiltfile  api_resources_gen.cue  cluster.cue  cluster_gen.cue  kue_api_resources_gen.cue  kue_gen.cue
kubernetes/cluster/kind/.kue/: api-resources.json  api-resources.txt  crds.yaml
kubernetes/cue.mod/: module.cue
kubernetes/cue.mod/pkg/github.com/abc-dp/kue/: .gitrepo  kue.cue
kubernetes/cue.mod/pkg/github.com/abc-dp/kue/tests/: package.cue
kubernetes/cue.mod/pkg/github.com/abc-dp/sue/: .gitrepo  sue.cue
kubernetes/kue/: BUILD.bazel  README.md  api_resources_gen.cue  kue.cue  kue_tool.cue
kubernetes/kue/.kue/: api-resources.json
sops/: .sops.yaml  main.cue  sops.enc.yaml  sops_tool.cue
sops/cue.mod/: module.cue
sops/cue.mod/pkg/github.com/abc-dp/sue/: .gitrepo
sops/cue.mod/pkg/github.com/abcue/sue/: .gitrepo
