load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_cue",
    integrity = "sha256-NO89svrj/6TZYp4heTVrkRyarCDxjtC1maZz5TZw33w=",
    strip_prefix = "rules_cue-e36857b348fe02fbedda41cbd3dcd3c4146dba86",
    url = "https://github.com/abc-dp/rules_cue/archive/e36857b348fe02fbedda41cbd3dcd3c4146dba86.zip",
)

http_archive(
    name = "bazel_skylib",
    sha256 = "bc283cdfcd526a52c3201279cda4bc298652efa898b10b4db0837dc51652756f",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.7.1/bazel-skylib-1.7.1.tar.gz",
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.7.1/bazel-skylib-1.7.1.tar.gz",
    ],
)

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")

bazel_skylib_workspace()
